# tradeengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  channel.hpp  config.h  input.txt  logginghandler.h  main.cpp  marketdata.h  matcher.hpp  order.hpp  policy.hpp  reader.hpp  registry.h  replayserver.cpp  server.cpp  trade.hpp
adapter/: base.h  orderbook.h
adapter/hkex/: hkexadapter.h  hkexmarketdata.h  omddmessages.h
adapter/tse/: tseadapter.h  tsemarketdata.h
feed/: dispatch.h  pcap.h  textfile.h  udp.h
src/: config.hpp  constants.hpp  engine.cpp  line_parser.hpp  market_data.hpp  md_processor.hpp  msg_io.hpp
src/hkex/: constants.hpp  hkex_processor.hpp
tests/: testadapter.cpp
